2009-09-30  Noel O'Boyle  <baoilleach@gmail.com>

	* src/builder.cpp: Reapplied Geoff's fix from r3028 (undone in r3251)
	to enable 0D molecules to be handled

2009-09-27  Noel O'Boyle  <baoilleach@gmail.com>

	* src/GUI/OBGUI.cpp: GUI now compiles and runs successfully on MacOSX.

2009-09-27  Noel O'Boyle  <baoilleach@gmail.com>

	* include/openbabel/graphsym.h, src/graphsym.cpp: Changed how static
	const unsigned int was defined to conform with C++ standard as it
	caused a compile error on MacOSX (see
	http://forums.macosxhints.com/showthread.php?t=91497 for details)

2009-09-25  Noel O'Boyle  <baoilleach@gmail.com>

	Fixed some errors when compiling the GUI on Mac.

2009-09-25  Noel O'Boyle  <baoilleach@gmail.com>

	Fixed some warnings when compiling with Intel Compiler. 

2009-09-22  Noel O'Boyle  <baoilleach@gmail.com>

	* include/openbabel/format.h: Added include <typeinfo>. Now OB compiles
	using Intel Compiler.

2009-09-22  Noel O'Boyle  <baoilleach@gmail.com>

	* src/GUI/babel.xpm: Applied patch from Riccardo Vianello (r_vianello
	at SF) to avoid warnings when building on Linux

2009-09-21  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/*: Copied + pasted the scripts directory from 22x as a number
	of commits were never merged.

2009-09-20  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/CMakeLists.txt: Support for pybel. Revert regression that
	prevented linked against Python libraries.
	* include/openbabel/text.h: Add newline at end to avoid warning

2009-09-19  Noel O'Boyle  <baoilleach@gmail.com>

	Miscellaneous static_casts added and unused variables removed to get rid
	of warnings under MSVC

2009-09-18  Noel O'Boyle  <baoilleach@gmail.com>

	* include/openbabel/generic.h: Remove unused declarations that caused
	warnings under MSVC
	* test/obtest.h: Make compatible with MSVC
	* test/CMakeLists.txt: Build tests in the same location as the OB DLL
	(Windows only)
	* src/formats/CMakeLists.txt: Build obf files in same location as the